# consoleGUI2

./: check.py  color.py  command.py  consoleApi.py  entries.py  formWidget.py  formWidget.ui  frame.py  frame.ui  index.py  main.py  pyproject.toml  readme.md  ui.py  uiBase.py  uiBase.ui  uiFrame.py  userUtils.py  utils.py
