[tool.poetry]
name = "repl_python3_consoleGUI2"
version = "0.1.0"
description = ""
authors = ["allwcons <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
import_file = "^1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
